k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: widget-system
  namespace: widget-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: widget-system.stortz.tech
      http:
        paths:
          - path: /angular
            pathType: Prefix
            backend:
              service:
                name: demo-angular
                port:
                  number: 80
          - path: /react
            pathType: Prefix
            backend:
              service:
                name: demo-react
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-angular
                port:
                  number: 80
